Added pictures - Not working yet
Added the doggo and new background

--- a/DeGokkers/DeGokkers/DeGokkers.csproj
+++ b/DeGokkers/DeGokkers/DeGokkers.csproj
@@ -82,5 +82,14 @@
   <ItemGroup>
     <None Include="Resources\PictureBox1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dog.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\grid.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dog1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
